--- a/app/src/main/res/drawable/custom_round.xml
+++ b/app/src/main/res/drawable/custom_round.xml
@@ -4,12 +4,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <size
-        android:width="300dp"
-        android:height="300dp"/>
+        android:width="35dp"
+        android:height="35dp"/>
+
+    <solid android:color="#CCCACA"/>
 
     <corners android:radius="150dp"/>
-    <stroke android:width="2dp"
-        android:color="@android:color/black"/>
+    <stroke android:width="3dp"
+        android:color="@color/colorPrimary"/>
 
 
 
