--- a/app/src/main/res/drawable/custom_round2.xml
+++ b/app/src/main/res/drawable/custom_round2.xml
@@ -4,13 +4,13 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <size
-        android:width="35dp"
-        android:height="35dp"/>
+        android:width="60dp"
+        android:height="60dp"/>
     <solid
-        android:color="#CCCACA"/>
+        android:color="@color/colorYellow"/>
     <corners
-        android:radius="150dp"/>
+        android:radius="30dp"/>
     <stroke
-        android:width="3dp"
+        android:width="2dp"
         android:color="@color/colorPrimary"/>
 </shape>
