--- a/app/src/main/res/layout/activity_edit_user_profile.xml
+++ b/app/src/main/res/layout/activity_edit_user_profile.xml
@@ -65,8 +65,8 @@
                 android:layout_weight=".2"
                 android:layout_height='match_parent'>
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:padding="5dp"
                 android:background="@drawable/custom_round2"
                 android:src="@drawable/ic_person_black_24dp"
@@ -88,6 +88,7 @@
             android:textSize="21sp" />
 
         <EditText
+            android:id="@+id/nameEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint=". . . . ."
@@ -96,7 +97,7 @@
             android:paddingEnd="10dp"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="21sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -114,8 +115,8 @@
         android:layout_weight=".2"
         android:layout_height='match_parent'>
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:padding="8dp"
             android:background="@drawable/custom_round2"
             android:src="@drawable/ic_phone_black_24dp"
@@ -138,6 +139,7 @@
 
 
         <EditText
+            android:id="@+id/phoneEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint=". . . . ."
@@ -164,8 +166,8 @@
         android:layout_weight=".2"
         android:layout_height='match_parent'>
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:padding="10dp"
             android:background="@drawable/custom_round2"
             android:src="@drawable/ic_email_black_24dp"
@@ -188,6 +190,7 @@
 
 
         <EditText
+            android:id="@+id/emailEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint=". . . . ."
@@ -214,8 +217,8 @@
         android:layout_weight=".2"
         android:layout_height='match_parent'>
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:padding="10dp"
             android:background="@drawable/custom_round2"
             android:src="@drawable/ic_lock_black_24dp"
@@ -238,6 +241,7 @@
 
 
         <EditText
+            android:id="@+id/passEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint=". . . . ."
