--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -19,7 +19,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <ProgressBar
                     android:id="@+id/progressBar"
@@ -29,28 +29,29 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="15dp" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/editBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="10dp"
-                    app:srcCompat="@drawable/ic_edit_black_24dp" />
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentEnd="true" />
             </RelativeLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@android:color/white"
                 app:cardCornerRadius="15dp">
 
+
                 <RelativeLayout
+                    android:id="@+id/r_layout1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp">
 
 
                     <de.hdodenhof.circleimageview.CircleImageView
@@ -58,150 +59,197 @@
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="10dp"
                         android:src="@drawable/ic_person_black_24dp"
-                        app:civ_border_color="@android:color/black"
-                        app:civ_border_width="2dp" />
+                        app:civ_border_color="@color/colorBlue"
+                        app:civ_border_width="4dp" />
 
-                    <TextView
-                        android:id="@+id/profileusername"
-                        android:layout_width="350dp"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/profileIV"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="5dp"
-                        android:text="-----"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="24sp" />
 
-                    <TextView
-                        android:id="@+id/profileemail"
-                        android:layout_width="350dp"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/profileusername"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="5dp"
-                        android:text="-----"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="21sp" />
+                    <ImageView
+                        android:id="@+id/cameraIV"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="110dp"
+                        android:layout_marginBottom="20dp"
+                        android:background="@drawable/custom_round"
+                        android:padding="12dp"
+                        android:src="@drawable/ic_photo_camera_black_24dp" />
                 </RelativeLayout>
-            </androidx.cardview.widget.CardView>
 
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:layout_height="0dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1">
 
-                <LinearLayout
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/emailUpdate"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1">
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:backgroundTint="@android:color/white"
+                    app:cardCornerRadius="5dp">
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/phoneUpdate"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="10dp"
-                        android:backgroundTint="@android:color/white"
-                        app:cardCornerRadius="5dp">
+                        android:layout_height="match_parent">
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
 
-                            <TextView
-                                android:id="@+id/ptxt"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="10dp"
-                                android:text="Phone"
-                                android:textColor="@android:color/black"
-                                android:textSize="21sp" />
+                        <ImageView
+                            android:id="@+id/IV1"
+                            android:layout_width="34dp"
+                            android:layout_height="34dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="10dp"
+                            android:src="@drawable/ic_email_black_24dp" />
 
-                            <TextView
-                                android:id="@+id/profilephoneNo"
-                                android:layout_width="150dp"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/ptxt"
-                                android:layout_centerHorizontal="true"
-                                android:layout_margin="10dp"
-                                android:layout_marginTop="10dp"
-                                android:padding="10dp"
-                                android:text="...."
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
+                        <ImageView
+                            android:id="@+id/edit_txt1"
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="10dp"
+                            android:src="@drawable/ic_done_green_24dp" />
 
-                        </RelativeLayout>
 
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:backgroundTint="@android:color/white"
-                        app:cardCornerRadius="5dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <TextView
-                                android:id="@+id/atxt"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="10dp"
-                                android:text="Address"
-                                android:textColor="@android:color/black"
-                                android:textSize="21sp" />
-
-                            <TextView
-                                android:id="@+id/profileaddress"
-                                android:layout_width="150dp"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/atxt"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="10dp"
-                                android:padding="10dp"
-                                android:text="....."
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/profileemail"
+                            android:layout_width="250dp"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:padding="20dp"
+                            android:text="...."
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/nameUpdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:backgroundTint="@android:color/white"
+                    app:cardCornerRadius="5dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                        <ImageView
+                            android:id="@+id/IV2"
+                            android:layout_width="38dp"
+                            android:layout_height="38dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="10dp"
+                            android:src="@drawable/ic_person_black_24dp" />
+
+                        <TextView
+                            android:id="@+id/edit_txt2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="10dp"
+                            android:text="Edit"
+                            android:textColor="@color/colorBlue"
+                            android:textSize="18sp" />
+
+
+                        <TextView
+                            android:id="@+id/profileusername"
+                            android:layout_width="250dp"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:padding="20dp"
+                            android:text="...."
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/phoneUpdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:backgroundTint="@android:color/white"
+                    app:cardCornerRadius="5dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/IV3"
+                            android:layout_width="34dp"
+                            android:layout_height="34dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="15dp"
+                            android:src="@drawable/ic_phone_black_24dp" />
+
+                        <TextView
+                            android:id="@+id/edit_txt3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="10dp"
+                            android:text="Edit"
+                            android:textColor="@color/colorBlue"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/profilephoneNo"
+                            android:layout_width="250dp"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:padding="20dp"
+                            android:text="...."
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="horizontal"
                 android:weightSum="2">
@@ -217,7 +265,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginBottom="10dp"
                         android:backgroundTint="@android:color/white"
@@ -266,7 +314,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="5dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginBottom="10dp"
                         android:backgroundTint="@android:color/white"
@@ -304,8 +352,6 @@
 
             </LinearLayout>
 
-
         </LinearLayout>
     </ScrollView>
-
 </RelativeLayout>
