Edit profile work done

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -125,6 +125,7 @@
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
+                            android:fontFamily="@font/amarante"
                             android:padding="20dp"
                             android:text="...."
                             android:textAlignment="center"
@@ -173,6 +174,7 @@
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="10dp"
+                            android:fontFamily="@font/amarante"
                             android:text="Edit"
                             android:textColor="@color/colorBlue"
                             android:textSize="18sp" />
@@ -183,6 +185,7 @@
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
+                            android:fontFamily="@font/amarante"
                             android:padding="20dp"
                             android:text="...."
                             android:textAlignment="center"
@@ -229,6 +232,7 @@
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="10dp"
+                            android:fontFamily="@font/amarante"
                             android:text="Edit"
                             android:textColor="@color/colorBlue"
                             android:textSize="18sp" />
@@ -238,6 +242,7 @@
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
+                            android:fontFamily="@font/amarante"
                             android:padding="20dp"
                             android:text="...."
                             android:textAlignment="center"
@@ -281,6 +286,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="20dp"
+                                android:fontFamily="@font/amarante"
                                 android:text="Number of Event"
                                 android:textColor="@android:color/black"
                                 android:textSize="21sp" />
@@ -291,8 +297,11 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/etxt"
                                 android:layout_centerHorizontal="true"
-                                android:layout_margin="10dp"
+                                android:layout_marginStart="10dp"
                                 android:layout_marginTop="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:fontFamily="@font/amarante"
                                 android:text="0"
                                 android:textAlignment="center"
                                 android:textColor="@android:color/black"
@@ -330,6 +339,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="20dp"
+                                android:fontFamily="@font/amarante"
                                 android:text="Number of Tour"
                                 android:textColor="@android:color/black"
                                 android:textSize="21sp" />
@@ -341,6 +351,7 @@
                                 android:layout_below="@id/ttxt"
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="10dp"
+                                android:fontFamily="@font/amarante"
                                 android:text="0"
                                 android:textAlignment="center"
                                 android:textColor="@android:color/black"
