--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,18 @@
     android:layout_height="match_parent"
     android:background="#fff"
     tools:openDrawer="start"
+    android:orientation="vertical"
     tools:context=".Activities.MainActivity">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        <RelativeLayout
+            android:id="@+id/tool1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_bright">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,12 +28,14 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_margin="10dp"/>
+        </RelativeLayout>
 
         <FrameLayout
             android:id="@+id/fragment_container"
+            android:layout_below="@+id/tool1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </RelativeLayout>
+        </RelativeLayout>
 
 
 
