--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,19 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorGreen"
-    tools:context=".Fragments.TourFragment">
+    android:background="@android:color/holo_red_light"
+    tools:context=".Fragments.GuideFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@android:color/white"
         android:layout_centerInParent="true"
         android:textSize="35sp"
-        android:text="Tour Fragment" />
-
-
+        android:textColor="@android:color/white"
+        android:text="Map Fragment" />
 
 </RelativeLayout>
