--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -1,71 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="160dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/holo_blue_dark"
+    android:layout_width="match_parent"
+    android:layout_height="170dp"
+    android:background="@android:color/background_dark"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="5dp"
-            app:civ_border_color="@android:color/white"
-            app:civ_border_width="2dp"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/ic_person_black_24dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+            android:id="@+id/navImageView"
+            android:layout_width="110dp"
+            android:layout_height="118dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:foreground="@drawable/ripple"
+            android:src="@drawable/ic_person_black_24dp"
+            app:civ_border_color="@color/colorPrimary"
+            app:civ_border_width="4dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="92dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="40dp">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:text="Your Full Name"
-                android:textColor="@android:color/black"
-                android:textSize="21sp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/namefromNavigation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/amarante"
+                    android:textColor="@android:color/white"
+                    android:textSize="21sp" />
 
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginBottom="5dp">
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
-                android:backgroundTint="@android:color/white">
+                <RelativeLayout
+                    android:layout_width="81dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp">
 
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_star_black_24dp"
-                android:gravity="center"
-                android:padding="8dp"
-                android:text="4.1"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@android:color/white"
+                        app:cardCornerRadius="20dp">
 
-            </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:drawableStart="@drawable/ic_star_black_24dp"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="4.1"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
 
-            </RelativeLayout>
-    </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
