--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tool1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_bright">
+            android:background="@android:color/white">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
