--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -4,84 +4,90 @@
     android:layout_width="match_parent"
     android:layout_height="170dp"
     android:background="@android:color/background_dark"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <com.skyfishjy.library.RippleBackground
+        android:id="@+id/content"
+        android:layout_width="137dp"
+        android:layout_height="match_parent"
+        app:rb_color="#FFFFFF"
+        app:rb_duration="3000"
+        app:rb_radius="32dp"
+        app:rb_rippleAmount="1"
+        app:rb_scale="10"
+        app:rb_type="fillRipple">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/navImageView"
-            android:layout_width="100dp"
-            android:layout_height="108dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="15dp"
-            android:foreground="@drawable/ripple"
+            android:padding="15dp"
             android:src="@drawable/ic_person_black_24dp"
             app:civ_border_color="@color/colorPrimary"
             app:civ_border_width="4dp" />
+    </com.skyfishjy.library.RippleBackground>
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/namefromNavigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical">
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/amarante"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/email_fromNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/amarante"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="15sp" />
 
 
-            <TextView
-                android:id="@+id/namefromNavigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:fontFamily="@font/amarante"
-                android:textColor="@android:color/white"
-                android:textSize="18sp" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/white"
+            app:cardCornerRadius="10dp">
 
-            <TextView
-                android:id="@+id/email_fromNavigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/amarante"
-                android:text="emailaddress@gmail.com"
-                android:layout_marginBottom="5dp"
-                android:textColor="@android:color/white"
-                android:textSize="15sp" />
-
-
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/white"
-                app:cardCornerRadius="10dp">
+                android:orientation="horizontal">
 
-                <LinearLayout
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center"
+                    android:layout_marginStart="3dp"
+                    android:src="@drawable/ic_star_black_24dp"
+                    android:textColor="@android:color/black" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="3dp"
-                        android:src="@drawable/ic_star_black_24dp"
-                        android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="25dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginEnd="5dp"
+                    android:text="4.5"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:layout_width="25dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="3dp"
-                        android:layout_marginEnd="5dp"
-                        android:text="4.5"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
     </LinearLayout>
+
 
 </LinearLayout>
